--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,21 @@
-== README
+Instagram Web App replica
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+A Rails app created using Devise; Simple_Form; Bootstrap; Paperclip; Masonry and Act as Votable gems.
 
-Things you may want to cover:
+Main Features:
 
-* Ruby version
+Liking Pictures
 
-* System dependencies
+Users and Restrictions
 
-* Configuration
+Image Uploading
 
-* Database creation
+  ---------------
+  
+Configuration
 
-* Database initialization
+Ruby version 2.1.3
 
-* How to run the test suite
+Rails version 4.2.4
 
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Sqlite DB
